--- a/ShadowBlog/Views/BlogPosts/ChildIndex.cshtml
+++ b/ShadowBlog/Views/BlogPosts/ChildIndex.cshtml
@@ -54,7 +54,7 @@
                             <div class="post-meta">
                                 <ul>
                                     <li>By</li>
-                                    <li><a href="#">Jordan Hopps</a></li> @*Add link to take them to my portfolio*@
+                                    <li><a href="https://jordanthopps.netlify.app/#about" target="_blank">Jordan Hopps</a></li> @*Add link to take them to my portfolio*@
                                     <li>@blogPost.Created.ToString("MMM dd, yyyy")</li>
                                 </ul>
                             </div>
@@ -84,40 +84,3 @@
     </div>
 </section>
 <!-- latest post Area End -->
-<!-- instagram Area Start-->
-<div class="instagram-area">
-    <div class="instagram-slider owl-carousel">
-        <div class="item">
-            <a href="#">
-                <img src="assets/img/instagram/1.jpg" alt="img">
-            </a>
-        </div>
-        <div class="item">
-            <a href="#">
-                <img src="assets/img/instagram/2.jpg" alt="img">
-            </a>
-        </div>
-
-        <div class="item">
-            <a href="#">
-                <img src="assets/img/instagram/3.jpg" alt="img">
-            </a>
-        </div>
-        <div class="item">
-            <a href="#">
-                <img src="assets/img/instagram/4.jpg" alt="img">
-            </a>
-        </div>
-        <div class="item">
-            <a href="#">
-                <img src="assets/img/instagram/5.jpg" alt="img">
-            </a>
-        </div>
-        <div class="item">
-            <a href="#">
-                <img src="assets/img/instagram/6.jpg" alt="img">
-            </a>
-        </div>
-    </div>
-</div>
-<!-- instagram Area End -->
