--- a/ShadowBlog/Views/Home/ContactMe.cshtml
+++ b/ShadowBlog/Views/Home/ContactMe.cshtml
@@ -12,10 +12,7 @@
             <div class="col-lg-9">
                 <div class="about-inner">
                     <h2 class="text-center mb-4">Contact</h2>
-                    <p class="mb-3">Nam rutrum suscipit orci ut ultrices. Sedarcu orci, quis augue porta feugiat posuere nisi. Fusce fringilla ametiam sit ameeque vitae elit condimentum auctor. Sed in turpis pulvinar, euismod arcu condimentum, gravida nisi. Proin vitae elit felis. Ut lobor tis elit arcu, at maximus dolor laoreet vel. Vestibulum elementum sem libero, nec euismod velit ullamcorper vitae.</p>
-                    <p class="mb-3">
-                        Nam quis quam tincidunt, interdum mauris nec, ultrices risus. Phasellus semper, elit at hendrerit consectetur, erodio tempor felis, id posuere nisl lectus vitae nulla. Fusce dictum, ex id volutpat sagittis, erat lectus lacinia augu landit nisi ornare finibus.
-                    </p>
+                    <p class="mb-3"><strong>Thank you for your interest! For software development opportunities, please inquire using the below form.</strong></p>
                     <!-- COMMENT FORM -->
                     <form class="comment-form" asp-action="ContactMe" method="post">
                         <div class="row">
