Affecting Login and Register Views

--- a/ShadowBlog/Views/BlogPosts/ChildIndex.cshtml
+++ b/ShadowBlog/Views/BlogPosts/ChildIndex.cshtml
@@ -54,7 +54,7 @@
                             <div class="post-meta">
                                 <ul>
                                     <li>By</li>
-                                    <li><a href="https://jordanthopps.netlify.app/#about" target="_blank">Jordan Hopps</a></li> @*Add link to take them to my portfolio*@
+                                    <li><a href="https://jordanthopps.netlify.app/#about" target="_blank">Jordan Hopps</a></li>
                                     <li>@blogPost.Created.ToString("MMM dd, yyyy")</li>
                                 </ul>
                             </div>
@@ -83,4 +83,3 @@
         <hr />
     </div>
 </section>
-<!-- latest post Area End -->
