--- a/ShadowBlog/Views/BlogPosts/TagIndex.cshtml
+++ b/ShadowBlog/Views/BlogPosts/TagIndex.cshtml
@@ -66,7 +66,7 @@
         <<hr />
         <div class="row">
             <!--@*PAGINATION VIEW*@-->
-            <<div class="col">
+            <div class="col">
                 Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
             </div>
         </div>
@@ -83,41 +83,3 @@
         <hr />
     </div>
 </section>
-<!-- latest post Area End -->
-<!-- instagram Area Start-->
-<div class="instagram-area">
-    <div class="instagram-slider owl-carousel">
-        <div class="item">
-            <a href="#">
-                <img src="assets/img/instagram/1.jpg" alt="img">
-            </a>
-        </div>
-        <div class="item">
-            <a href="#">
-                <img src="assets/img/instagram/2.jpg" alt="img">
-            </a>
-        </div>
-
-        <div class="item">
-            <a href="#">
-                <img src="assets/img/instagram/3.jpg" alt="img">
-            </a>
-        </div>
-        <div class="item">
-            <a href="#">
-                <img src="assets/img/instagram/4.jpg" alt="img">
-            </a>
-        </div>
-        <div class="item">
-            <a href="#">
-                <img src="assets/img/instagram/5.jpg" alt="img">
-            </a>
-        </div>
-        <div class="item">
-            <a href="#">
-                <img src="assets/img/instagram/6.jpg" alt="img">
-            </a>
-        </div>
-    </div>
-</div>
-<!-- instagram Area End -->
