--- a/ShadowBlog/Views/Shared/_Layout.cshtml
+++ b/ShadowBlog/Views/Shared/_Layout.cshtml
@@ -115,9 +115,6 @@
         </header>
     </div>
     <!-- navbar end -->
-    @*<div class="banner-logo-area">
-            <img src="~/img/Blog _Layout Head.png" alt="img">
-        </div>*@
     <div class="container-fluid mt-5">
         @RenderBody()
     </div>
@@ -131,7 +128,6 @@
                         <div class="footer-widget widget">
                             <h4 class="widget-title">Follow me</h4>
                             <ul class="social-area">
-                                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
                                 <li><a href="#"><i class="fab fa-github"></i></a></li>
                                 <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
                             </ul>
@@ -148,9 +144,15 @@
                         <div class="footer-widget widget widget_link">
                             <h4 class="widget-title">Explore tags</h4>
                             <ul>
-                                <li><a href="home-3.html">#Brass Tacks C#</a></li>
-                                <li><a href="home-3.html">#How To:</a></li>
-                                <li><a href="home-3.html">#Versus</a></li>
+                                <li>
+                                    <a asp-action="TagIndex" asp-route-tag="BrassTacks">#Brass Tacks</a>
+                                </li>
+                                <li>
+                                    <a asp-action="TagIndex" asp-route-tag="HowTo">#How To:</a>
+                                </li>
+                                <li>
+                                    <a asp-controller="BlogPosts" asp-action="TagIndex" asp-route-tag="YellowTrace">#Versus</a>
+                                </li>
                             </ul>
                         </div>
                     </div>
