_Layout tag update for Versus

--- a/ShadowBlog/Views/Shared/_Layout.cshtml
+++ b/ShadowBlog/Views/Shared/_Layout.cshtml
@@ -151,7 +151,7 @@
                                     <a asp-action="TagIndex" asp-route-tag="HowTo">#How To:</a>
                                 </li>
                                 <li>
-                                    <a asp-controller="BlogPosts" asp-action="TagIndex" asp-route-tag="YellowTrace">#Versus</a>
+                                    <a asp-controller="BlogPosts" asp-action="TagIndex" asp-route-tag="Versus">#Versus</a>
                                 </li>
                             </ul>
                         </div>
