Blogpost image update

--- a/ShadowBlog/Views/Shared/_Layout.cshtml
+++ b/ShadowBlog/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     <title>Shadow Blog</title>
 
     <!--favicon icon-->
-    @*<link rel="icon" href="assets/img/fevicon.png">*@
+    <link rel="icon" href="~/favicon.ico">
 
     <!--Google Fonts-->
     <link href="https://fonts.googleapis.com/css2?family=Khula:wght@400;600&family=Lustria&family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
