--- a/ShadowBlog/Views/Shared/_Layout.cshtml
+++ b/ShadowBlog/Views/Shared/_Layout.cshtml
@@ -145,10 +145,10 @@
                             <h4 class="widget-title">Explore tags</h4>
                             <ul>
                                 <li>
-                                    <a asp-action="TagIndex" asp-route-tag="BrassTacks">#Brass Tacks</a>
+                                    <a asp-controller="BlogPosts" asp-action="TagIndex" asp-route-tag="BrassTacks">#Brass Tacks</a>
                                 </li>
                                 <li>
-                                    <a asp-action="TagIndex" asp-route-tag="HowTo">#How To:</a>
+                                    <a asp-controller="BlogPosts" asp-action="TagIndex" asp-route-tag="HowTo">#How To:</a>
                                 </li>
                                 <li>
                                     <a asp-controller="BlogPosts" asp-action="TagIndex" asp-route-tag="Versus">#Versus</a>
