Featured Carousel Update

--- a/ShadowBlog/Views/BlogPosts/TagIndex.cshtml
+++ b/ShadowBlog/Views/BlogPosts/TagIndex.cshtml
@@ -12,26 +12,26 @@
 
 <!-- Banner Area Start-->
 <section class="banner-area">
-    <div class="banner-slider owl-carousel">
-        <div class="item" style="background: url(assets/img/banner/slider-1.jpg)">
+    <div class="banner-slider owl-carousel owl-loaded">
+        <div class="item" style="background: url(/img/BlogPostCarousel.png)">
             <div class="banner-inner">
-                <h4>Dev Blog</h4>
-                <h2>How To: [DEV BLOGPOST TITLE]</h2>
-                <a href="single.html" class="btn readmore-button">Read more</a>
+                <h4>Featured Post</h4>
+                <h2>Virtual vs. Virtual</h2>
+                <a href="https://heroku-shadow-blog.herokuapp.com/JordansBlog/PostDetails/virtual-vs-virtual#" class="btn readmore-button">Read more</a>
             </div>
         </div>
         <div class="item" style="background: url(assets/img/banner/slider-2.jpg)">
             <div class="banner-inner">
-                <h4>Dev Blog</h4>
-                <h2>How To: [DEV BLOGPOST TITLE]</h2>
-                <a href="single.html" class="btn readmore-button">Read more</a>
+                <h4>Featured Post</h4>
+                <h2>How To: Stand Up A C# Project in Heroku</h2>
+                <a href="https://heroku-shadow-blog.herokuapp.com/JordansBlog/PostDetails/how-to-stand-up-a-c-sharp-project-in-heroku" class="btn readmore-button">Read more</a>
             </div>
         </div>
-        <div class="item" style="background: url(assets/img/banner/slider-1.jpg)">
+        <div class="item" style="background: url(/img/BlogPostCarousel.png)">
             <div class="banner-inner">
-                <h4>Dev Blog</h4>
-                <h2>How To: [DEV BLOGPOST TITLE]</h2>
-                <a href="single.html" class="btn readmore-button">Read more</a>
+                <h4>Featured Post</h4>
+                <h2>Brass Tacks: APIE</h2>
+                <a href="https://heroku-shadow-blog.herokuapp.com/JordansBlog/PostDetails/brass-tacks-apie" class="btn readmore-button">Read more</a>
             </div>
         </div>
     </div>
@@ -45,7 +45,7 @@
             {
                 <div class="col-lg-4 col-md-6">
                     <div class="thumb pb-lg-3 pb-5">
-                        <img class="w-100" src="assets/img/post/1.jpg" alt="img">
+                        <img class="w-100" src="~/img/BlogPostDefaultImage.jpg" alt="img">
                     </div>
                     <div class="blog-post-item-wrap">
                         <div class="post-content">
@@ -54,7 +54,7 @@
                             <div class="post-meta">
                                 <ul>
                                     <li>By</li>
-                                    <li><a href="#">Jordan Hopps</a></li> @*TODO: Add link to take them to my portfolio*@
+                                    <li><a href="https://jordanthopps.netlify.app/#about" target="_blank">Jordan Hopps</a></li> @*TODO: Add link to take them to my portfolio*@
                                     <li>@blogPost.Created.ToString("MMM dd, yyyy")</li>
                                 </ul>
                             </div>
