--- a/ShadowBlog/Views/Home/Index.cshtml
+++ b/ShadowBlog/Views/Home/Index.cshtml
@@ -16,23 +16,23 @@
     <div class="banner-slider owl-carousel owl-loaded">
         <div class="item" style="background: url(/img/BlogPostCarousel.png)">
             <div class="banner-inner">
-                <h4>Dev Blog</h4>
-                <h2>Blog Post 1</h2>
-                <a href="single.html" class="btn readmore-button">Read more</a>
+                <h4>Featured Post</h4>
+                <h2>Virtual vs. Virtual</h2>
+                <a href="https://heroku-shadow-blog.herokuapp.com/JordansBlog/PostDetails/virtual-vs-virtual#" class="btn readmore-button">Read more</a>
             </div>
         </div>
         <div class="item" style="background: url(assets/img/banner/slider-2.jpg)">
             <div class="banner-inner">
-                <h4>Dev Blog</h4>
-                <h2>Blog Post 2</h2>
-                <a href="single.html" class="btn readmore-button">Read more</a>
+                <h4>Featured Post</h4>
+                <h2>How To: Stand Up A C# Project in Heroku</h2>
+                <a href="https://heroku-shadow-blog.herokuapp.com/JordansBlog/PostDetails/how-to-stand-up-a-c-sharp-project-in-heroku" class="btn readmore-button">Read more</a>
             </div>
         </div>
-        <div class="item" style="background: url(assets/img/banner/slider-1.jpg)">
+        <div class="item" style="background: url(/img/BlogPostCarousel.png)">
             <div class="banner-inner">
-                <h4>Dev Blog</h4>
-                <h2>Blog Post 3</h2>
-                <a href="single.html" class="btn readmore-button">Read more</a>
+                <h4>Featured Post</h4>
+                <h2>Brass Tacks: APIE</h2>
+                <a href="https://heroku-shadow-blog.herokuapp.com/JordansBlog/PostDetails/brass-tacks-apie" class="btn readmore-button">Read more</a>
             </div>
         </div>
     </div>
