--- a/ShadowBlog/Views/BlogPosts/SearchPosts.cshtml
+++ b/ShadowBlog/Views/BlogPosts/SearchPosts.cshtml
@@ -45,7 +45,7 @@
             {
                 <div class="col-lg-4 col-md-6">
                     <div class="thumb pb-lg-3 pb-5">
-                        <img class="w-100" src="assets/img/post/1.jpg" alt="img">
+                        <img class="w-100" src="~/img/BlogPostDefaultImage.jpg" alt="img">
                     </div>
                     <div class="blog-post-item-wrap">
                         <div class="post-content">
