BrassTacks and HowTo

--- a/ShadowBlog/Views/BlogPosts/ChildIndex.cshtml
+++ b/ShadowBlog/Views/BlogPosts/ChildIndex.cshtml
@@ -37,7 +37,8 @@
     </div>
 </section>
 <!-- Banner Area End -->
-<!-- latest post Area Start-->
+
+<!-- Latest Post Area Start-->
 <section class="latest-post-area pd-top-115 pd-bottom-110">
     <div class="container">
         <div class="row">
