Featured Future Post Update

--- a/ShadowBlog/Views/BlogPosts/ChildIndex.cshtml
+++ b/ShadowBlog/Views/BlogPosts/ChildIndex.cshtml
@@ -13,7 +13,7 @@
 <!-- Banner Area Start-->
 <section class="banner-area">
     <div class="banner-slider owl-carousel owl-loaded">
-        <div class="item" style="background: url(/img/BlogPostCarousel.png)">
+        <div class="item" style="background: url(/wwwroot/img/Versus/FutureFuture/FeaturedBlogFuture.jpg)">
             <div class="banner-inner">
                 <h4>Featured Post</h4>
                 <h2>Virtual vs. Virtual</h2>
