--- a/ShadowBlog/Views/Shared/_Layout.cshtml
+++ b/ShadowBlog/Views/Shared/_Layout.cshtml
@@ -95,7 +95,7 @@
                                 <a href="https://jordanthopps.netlify.app/#about" target="_blank">About</a>
                             </li>
                             <li>
-                                <a asp-controller="Swagger" asp-action="Index">Swagger Help</a>
+                                <a asp-controller="swagger" asp-action="Index">Swagger Help</a>
                             </li>
                             <li>
                                 <a asp-controller="Home" asp-action="ContactMe">Contact</a>
