--- a/ShadowBlog/Views/Shared/_Layout.cshtml
+++ b/ShadowBlog/Views/Shared/_Layout.cshtml
@@ -89,7 +89,7 @@
                     <div class="collapse navbar-collapse" id="themefie_main_menu">
                         <ul class="navbar-nav menu-open text-end">
                             <li>
-                                <a asp-controller="Blogposts" asp-action="ChildIndex">Home</a>
+                                <a asp-controller="Blogposts" asp-action="ChildIndex" asp-route-blogId="@blog.Id">Home</a>
                             </li>
                             <li>
                                 <a href="https://jordanthopps.netlify.app/#about" target="_blank">About</a>
