--- a/ShadowBlog/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/ShadowBlog/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -5,44 +5,44 @@
     ViewData["ActivePage"] = ManageNavPages.Index;
 }
 
-<h4>@ViewData["Title"]</h4>
-<partial name="_StatusMessage" model="Model.StatusMessage" />
-<div class="row">
-    <div class="col-md-6">
-        <form id="profile-form" method="post" enctype="multipart/form-data">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Username"></label>
-                <input asp-for="Username" class="form-control" disabled />
-            </div>
-            <div class="form-group">
-                <label asp-for="Input.PhoneNumber"></label>
-                <input asp-for="Input.PhoneNumber" class="form-control" />
-                <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
-            </div>
+    <h4>@ViewData["Title"]</h4>
+    <partial name="_StatusMessage" model="Model.StatusMessage" />
 
-            <div class="form-group">
-                <label asp-for="Input.Image"></label>
-                <input type="file" accept=".png,.jpg,.jpeg" asp-for="Input.Image" class="form-control" />
-                <span asp-validation-for="Input.Image" class="text-danger"></span>
-            </div>
+    <div class="row">
+        <div class="col-md-6">
+            <form id="profile-form" method="post" enctype="multipart/form-data">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="Username"></label>
+                    <input asp-for="Username" class="form-control" disabled />
+                </div>
+                <div class="form-group">
+                    <label asp-for="Input.PhoneNumber"></label>
+                    <input asp-for="Input.PhoneNumber" class="form-control" />
+                    <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
+                </div>
 
-            @*<div class="form-group">
-                    <label>Select Image</label>
-                    <div class="custom-file">
-                        <input asp-for="Input.Image" type="file" class="form-control-file custom-file-input" />
-                        <label asp-for="Input.Image" class="control-label custom-file-label">Choose</label>
-                    </div>
-                </div>*@
+                <div class="form-group">
+                    <label asp-for="Input.Image"></label>
+                    <input type="file" accept=".png,.jpg,.jpeg" asp-for="Input.Image" class="form-control" />
+                    <span asp-validation-for="Input.Image" class="text-danger"></span>
+                </div>
 
-            <button id="update-profile-button" type="submit" class="btn btn-primary">Save</button>
-        </form>
+                @*<div class="form-group">
+                        <label>Select Image</label>
+                        <div class="custom-file">
+                            <input asp-for="Input.Image" type="file" class="form-control-file custom-file-input" />
+                            <label asp-for="Input.Image" class="control-label custom-file-label">Choose</label>
+                        </div>
+                    </div>*@
+
+                <button id="update-profile-button" type="submit" class="btn btn-secondary my-2">Save</button>
+            </form>
+        </div>
+        <div class="col">
+            <img class="img-fluid" src="@Model.CurrentImage" />
+        </div>
     </div>
-    <div class="col">
-        <img class="img-fluid" src="@Model.CurrentImage" />
-    </div>
-</div>
-
-@section Scripts {
-    <partial name="_ValidationScriptsPartial" />
-}
+    @section Scripts {
+        <partial name="_ValidationScriptsPartial" />
+    }
