--- a/ShadowBlog/Views/BlogPosts/Details.cshtml
+++ b/ShadowBlog/Views/BlogPosts/Details.cshtml
@@ -41,8 +41,8 @@
                             <div class="row">
                                 <div class="col-lg-6 col-md-4 col-sm-5">
                                     <ul class="social-area">
-                                        <li><a href="#"><i class="fab fa-github"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                                        <li><a href="https://github.com/jordanthopps"><i class="fab fa-github"></i></a></li>
+                                        <li><a href="https://www.linkedin.com/in/jordanhopps"><i class="fab fa-linkedin-in"></i></a></li>
                                     </ul>
                                 </div>
                                 <div class="col-lg-6 col-md-8 col-sm-7 text-sm-end">
