--- a/ShadowBlog/Views/Home/ContactMe.cshtml
+++ b/ShadowBlog/Views/Home/ContactMe.cshtml
@@ -1,18 +1,12 @@
-﻿    <!-- Banner Area Start-->
-<div class="banner-area">
-    <div class="container">
-        <img src="assets/img/contact.jpg" alt="img">
-    </div>
-</div>
-<!-- Banner Area End -->
+﻿
 <!-- latest post Area Start-->
-<section class="about-area pd-top-70 pd-bottom-100">
+<section class="about-area pd-top-65 pd-bottom-100">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-9">
                 <div class="about-inner">
                     <h2 class="text-center mb-4">Contact</h2>
-                    <p class="mb-3"><strong>Thank you for your interest! For software development opportunities, please inquire using the below form.</strong></p>
+                    <p class="mb-3 text-center"><strong>Thank you for your interest! For software development opportunities, please inquire using the below form.</strong></p>
                     <!-- COMMENT FORM -->
                     <form class="comment-form" asp-action="ContactMe" method="post">
                         <div class="row">
