--- a/ShadowBlog/Views/Shared/_Layout.cshtml
+++ b/ShadowBlog/Views/Shared/_Layout.cshtml
@@ -128,15 +128,15 @@
                         <div class="footer-widget widget">
                             <h4 class="widget-title">Follow me</h4>
                             <ul class="social-area">
-                                <li><a href="#"><i class="fab fa-github"></i></a></li>
-                                <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                                <li><a href="https://github.com/jordanthopps"><i class="fab fa-github"></i></a></li>
+                                <li><a href="https://www.linkedin.com/in/jordanhopps"><i class="fab fa-linkedin-in"></i></a></li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="footer-widget widget">
                             <div class="footer-logo d-inline-block">
-                                <img src="assets/img/logo-2.png" alt="img">
+                                <img src="~/favicon.ico" alt="img">
                             </div>
                         </div>
                     </div>
