--- a/ShadowBlog/Views/Shared/_Layout.cshtml
+++ b/ShadowBlog/Views/Shared/_Layout.cshtml
@@ -1,4 +1,7 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Identity
+@inject SignInManager<BlogUser> SignInManager
+
+<!DOCTYPE html>
 <html lang="zxx">
 <head>
     <meta charset="UTF-8">
@@ -42,33 +45,28 @@
     <div class="body-overlay" id="body-overlay"></div>
 
     <!-- //. search Popup -->
-    <!-- navbar start -->
-    <!--Side Nav Menu-->
-    <div id="side-navbar" class="side-navbar">
-        <i id="side-menu-close" class="fa fa-times"></i>
-        <ul class="side-navbar-items">
-            <li><a href="#">Home</a></li>
-            <li><a href="https://jordanthopps.netlify.app/#about" target="_blank">About</a></li>
-            <li><a asp-controller="Home" asp-action="ContactMe">Contact</a></li>
 
-            <li>
-                <a asp-area="Identity"
-                   asp-page="/Account/Login">Log In</a>
-            </li>
-            <li>
-                <a asp-area="Identity" asp-page="/Account/Manage/Index">Manage Account</a>
-            </li>
-            <li>
-                <a asp-area="Identity"
-                   asp-page="/Account/Register">Register</a>
-            </li>
-            <li>
-                <a asp-area="Identity"
-                   asp-pag="/Account/Logout">Logout</a>
-            </li>
-        </ul>
+    <div id="mySidenav" class="sidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <form asp-action="SearchPosts" asp-controller="BlogPosts" class="input-group rounded w-100 px-4">
+            <input type="search" class="form-control rounded" placeholder="Search..." aria-label="Search"
+                   aria-describedby="search-addon" name="searchTerm" />
+            <button class="input-group-text border-0" type="submit" id="search-addon">
+                <i class="fas fa-search"></i>
+            </button>
+        </form>
+        <a href="https://jordanthopps.netlify.app/#about" target="_blank">About</a>
+        <a asp-controller="Home" asp-action="ContactMe">Contact</a>
+        <a asp-area="Identity"
+           asp-page="/Account/Login">Log In</a>
+        @if (SignInManager.IsSignedIn(User))
+        {
+            <a asp-area="Identity" asp-page="/Account/Manage/Index">Manage Account</a>
+            <a asp-area="Identity"
+               asp-page="/Account/Logout">Logout</a>
+        }
+
     </div>
-    <!-- /Side Nav Menu-->
     <!--Top Nav Menu-->
     <div>
         <header class="navbar-area">
@@ -83,7 +81,7 @@
                     </div>
                     <div class="lawel-header-left">
                         <div class="side-menu-bar d-inline-flex">
-                            <i id="side-menu-open" class="fa fa-bars"></i>
+                            <span style="font-size:20px;cursor:pointer" onclick="openNav()">&#9776;</span>
                         </div>
                     </div>
                     <div class="collapse navbar-collapse" id="themefie_main_menu">
@@ -95,13 +93,12 @@
                                 <a href="https://jordanthopps.netlify.app/#about" target="_blank">About</a>
                             </li>
                             <li>
-                                <a asp-controller="swagger" asp-action="Index">Swagger Help</a>
-                            </li>
-                            <li>
                                 <a asp-controller="Home" asp-action="ContactMe">Contact</a>
                             </li>
+                            <li>
+                                <a asp-controller="swagger" asp-action="Index">Swagger API</a>
+                            </li>
                         </ul>
-                        <div class="navbar-nav menu-open text-start"><partial name="_LoginPartial" /></div>
                         <form asp-action="SearchPosts" asp-controller="BlogPosts" class="input-group rounded w-100 px-4">
                             <input type="search" class="form-control rounded" placeholder="Search..." aria-label="Search"
                                    aria-describedby="search-addon" name="searchTerm" />
@@ -109,6 +106,8 @@
                                 <i class="fas fa-search"></i>
                             </button>
                         </form>
+                        <div class="navbar-nav menu-open text-start"><partial name="_LoginPartial" /></div>
+
                     </div>
                 </div>
             </nav>
@@ -182,15 +181,12 @@
     <script src="~/js/wow.min.js"></script>
 
     <!-- main js  -->
+    <script src="~/js/jhcustom.js"></script>
     <script src="~/js/main.js"></script>
 
-    <!--My Custom JS-->
-    <script src="~/js/jhcustom.js"></script>
-
     <!-- JavaScript Bundle with Popper | I put this in-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-    </script>
-
+    <!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>-->
     <!--Tiny MCE-->
     <script src="https://cdn.tiny.cloud/1/6q3jild435pb80zy4oolee7eb53rppqg5te34ccqfh85haoy/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
     <script>
@@ -200,6 +196,8 @@
     </script>
     @await RenderSectionAsync("Scripts", required: false)
 
+
+    <script src="~/js/main.js"></script>
 </body>
 </html>
 
