--- a/ShadowBlog/Views/Shared/_LoginPartial.cshtml
+++ b/ShadowBlog/Views/Shared/_LoginPartial.cshtml
@@ -2,15 +2,19 @@
 @inject SignInManager<BlogUser> SignInManager
 @inject UserManager<BlogUser> UserManager
 
+@{ 
+    BlogUser blogUser = await UserManager.GetUserAsync(User);
+}
+
 <ul class="navbar-nav">
     @if (SignInManager.IsSignedIn(User))
     {
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity.Name!</a>
+            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @blogUser.FirstName</a>
         </li>
         <li class="nav-item">
             <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                <button type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+                <button style="padding-top: .2rem" type="submit" class="nav-link btn btn-link text-dark">Logout</button>
             </form>
         </li>
     }
