--- a/ShadowBlog/wwwroot/css/style.css
+++ b/ShadowBlog/wwwroot/css/style.css
@@ -578,8 +578,8 @@ ul {
   color: #fff;
 }
 .btn:after {
-  content: "";
-  background: var(--main-color);
+  content: "";/*
+  background: var(--main-color);*/
   position: absolute;
   -webkit-transition: all 0.4s ease-in;
   transition: all 0.4s ease-in;
@@ -595,6 +595,7 @@ ul {
           transform-origin: top left;
   width: 0;
 }
+
 .btn img {
   margin-right: 7px;
   margin-top: -1px;
@@ -857,24 +858,24 @@ ul {
     ## Back Top
 ------------------------------------------------*/
 .back-to-top {
-  position: fixed;
-  right: 30px;
-  bottom: 30px;
-  width: 44px;
-  height: 44px;
-  color: #fff;
-  background-color: var(--main-color);
-  text-align: center;
-  line-height: 44px;
-  z-index: 99;
-  font-size: 20px;
-  cursor: pointer;
-  -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-          box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-  display: none;
-  -webkit-animation: backto-top-bounce 4s infinite ease-in-out;
-          animation: backto-top-bounce 4s infinite ease-in-out;
-  border-radius: 4px;
+    position: fixed;
+    right: 30px;
+    bottom: 30px;
+    width: 44px;
+    height: 44px;
+    color: #fff;
+    background-color: #fce38a;
+    text-align: center;
+    line-height: 44px;
+    z-index: 99;
+    font-size: 20px;
+    cursor: pointer;
+    -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    display: none;
+    -webkit-animation: backto-top-bounce 4s infinite ease-in-out;
+    animation: backto-top-bounce 4s infinite ease-in-out;
+    border-radius: 4px;
 }
 .back-to-top svg {
   margin-top: 11px;
@@ -1627,8 +1628,8 @@ ul {
 }
 
 .sc5::-webkit-scrollbar-thumb {
-  background: var(--main-color);
-  border-radius: 10px;
+    background: #fce38a;
+    border-radius: 10px;
 }
 
 /*=======================
@@ -1682,7 +1683,7 @@ ul.side-navbar-items li.menu-item-has-children .sub-menu {
   margin-top: 10px;
 }
 ul.side-navbar-items li a {
-  color: #b5b5b5;
+  color: #b5b5b5!important;
   font-size: 12px;
   display: inline-block;
   padding: 8px 0;
@@ -1710,7 +1711,7 @@ ul.side-navbar-items li a:hover {
           box-shadow: 0 9px 150px -30px rgba(0, 0, 0, 0.09);
 }
 .navbar-area .lawel-header-left {
-  width: 20%;
+  width: 10%;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -1723,8 +1724,8 @@ ul.side-navbar-items li a:hover {
 }
 .navbar-area .nav-container {
   background-color: transparent;
-  padding: 5px 35px 4px;
-  -webkit-transition: all 0.4s;
+/*  padding: 5px 35px 4px;
+*/  -webkit-transition: all 0.4s;
   transition: all 0.4s;
   min-height: 60px;
 }
@@ -1744,8 +1745,8 @@ ul.side-navbar-items li a:hover {
   font-weight: 700;
 }
 .navbar-area .nav-container .navbar-collapse .navbar-nav {
-  display: block;
-  width: 100%;
+  display:flex;
+  width: 70%;
 }
 .navbar-area .nav-container .navbar-collapse .navbar-nav li {
   margin-top: 0;
