--- a/ShadowBlog/Views/BlogPosts/Details.cshtml
+++ b/ShadowBlog/Views/BlogPosts/Details.cshtml
@@ -16,9 +16,9 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="blog-post-item-wrap mb-3">
-                    <@*div class="thumb pd-bottom-45">
-                        <img class="w-100" src="assets/img/post/single.jpg" alt="img ">
-                    </div>*@
+                    @*<div class="thumb pd-bottom-45">
+            <img class="w-100" src="assets/img/post/single.jpg" alt="img ">
+        </div>*@
                     <div class="row justify-content-center">
                         <div class="col-lg-10">
                             <div class="post-content text-center pt-0 mb-4">
