Added Home to sidenav

--- a/ShadowBlog/Views/Shared/_Layout.cshtml
+++ b/ShadowBlog/Views/Shared/_Layout.cshtml
@@ -55,6 +55,8 @@
                 <i class="fas fa-search"></i>
             </button>
         </form>
+        <br />
+        <a asp-controller="Home" asp-action="Index">Home</a>
         <a href="https://jordanthopps.netlify.app/#about" target="_blank">About</a>
         <a asp-controller="Home" asp-action="ContactMe">Contact</a>
         <a asp-area="Identity"
