Basic Email Service updates

--- a/ShadowBlog/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
+++ b/ShadowBlog/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
@@ -1,7 +1,15 @@
 ﻿@page
 @model ConfirmEmailModel
 @{
-    ViewData["Title"] = "Confirm email";
+    ViewData["Title"] = "Confirmed email";
 }
 
-<h1>@ViewData["Title"]</h1>
+<div style="padding-top: 3rem!important; padding-bottom: 10rem!important">
+    <div class="text-center">
+
+        <h1>@ViewData["Title"]</h1>
+        <p>
+            Thank you for registering with my blog! I hope you'll enjoy the articles as much as I have authoring them.
+        </p>
+    </div>
+</div>
